# esi-trabalho-final

./: .gitignore  README.md  data_transformed.csv  examples.ipynb  exemplo_tokeniza.ipynb  pipeline_dados.py  requirements.txt  servidor_cliente.ipynb  times-series-example.ipynb  tratamento.ipynb
data/: data_transformed.csv  price_real_value.csv
jupyter/: tratamento.ipynb
sdp-project/: kaggle-token.json
sdp-project/sdp-data/: README.md  pipeline-esi.py  pipeline.py  pymetrix.py  pyproject.toml
sdp-project/sdp-data/data/: data_transformed.csv
sdp-project/sdp-data/logs/: data_2025_07_28_14_11_11  data_2025_07_28_14_12_06  data_2025_07_28_14_13_40  data_2025_07_28_14_14_23  data_2025_07_28_14_17_26  data_2025_07_28_14_39_42  data_2025_07_28_14_46_24  data_2025_07_28_14_49_54  data_2025_07_28_14_50_50  data_2025_07_28_21_19_01
sdp-project/sdp-model/: pipeline.py  plots_.py  pyproject.toml
sdp-project/sdp-model/benchmark/metrics/: data.json
sdp-project/sdp-service/: model.pkl  pyproject.toml  service_cliente.ipynb
sdp-project/sdp-service/src/sdp/: app.py  service.py
sdp-project/sdp-service/tests/: test_app.py
