[project]
name = "sdp-data"
version = "1.1.1"
description = "Finalização do projeto final de ESI"
authors = [
    {name = "Mateus Sousa do Carmo",email = "mateus.1090ptbr0@gmail.com"},
    {name = "Adilio Juvencio de Freitaas", email="n@gmail.com"}
]
license = {text = "None"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
