[project]
name = "sdp-service"
version = "1.1.1"
description = ""
authors = [
    {name = "Mateus Sousa do Carmo",email = "mateus.1090ptbr0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
